# PharmLoop

./: .env.example  .gitignore  CLAUDE.md  phase1-fixes.md  phase1.md  phase4.md  pyproject.toml  requirements.txt
api/: cache.py  monitoring.py  server.py
data/pipeline/: drugbank_parser.py  interaction_extractor.py  quality_report.py  run_pipeline.py
data/processed/: context_examples.json  drugs.json  drugs_v2.json  drugs_v3.json  (+7 more)
debug experiments/: experiment.md  experiment_round2.md
evaluation/: suite.py
experiments/: class_trajectory_results.json  depth_ablation_results.json  experiment_results_report.md  run_all_experiments.py  run_round2_experiments.py  velocity_distribution_results.json
pharmloop/: __init__.py  context.py  drug_resolver.py  encoder.py  hierarchical_hopfield.py  hopfield.py  inference.py  model.py  oscillator.py  output.py  partial_convergence.py  polypharmacy.py  polypharmacy_full.py  templates.py
phases/: phase2.md  phase3.md  phase4a.md  phase4b.md  phase5.md
tests/: test_api.py  test_cache.py  test_context.py  test_context_expanded.py  test_drug_resolver.py  test_hierarchical_hopfield.py  test_hopfield.py  test_hopfield_v2.py  test_inference.py  test_oscillator.py  test_partial_conv.py  test_phase2.py  test_pipeline.py  test_polypharmacy.py  test_polypharmacy_full.py  test_regression.py  test_separation.py  test_stress.py  test_templates.py
training/: build_phase2.py  cross_reference.py  data_loader.py  loss.py  split_data.py  train.py  train_context.py  train_phase2.py  train_phase3.py  train_phase4a.py  train_phase4b.py
(+11 files in other folders)
