[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmloop"
version = "0.1.0"
description = "Recurrent oscillatory reasoning engine for drug interaction checking"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "matplotlib>=3.7",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
include = ["pharmloop*", "training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
